@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c9fc2425782f26eeedc4cb60b713c473665beec5 ChangeLog
+SHA1 63b6fc901b1ab2ec61bb2d3b78d85e012a1f40fc ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 868a688510899dc22a6397b1a0d5cc8b0f560f36 META.yml
-SHA1 02a2f917eafd8af02b45e26be45504a0dd4ad780 Makefile.PL
+SHA1 1ec96673dd686bd24062f9b4c854a53399852304 META.yml
+SHA1 198aae5e30dac3f3c8bdf09e3c856ebb63234c47 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 eb8d78832b7ca6c1764712da90d0c31bc31599ce lib/Net/FullAuto.pm
+SHA1 7f6801f2c392047ece14e710e5e264908d7da9e2 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTl1nRAAoJEBa/9Pad787ErpIH/3S+0V1VKDaarbCYCxMdZjNd
-M7BmUJ+dbqvE4mvT7O0HVpqoT3e6huVWIXv0u4PaqaR5ye0WX5xfaETf3/BrJe8T
-1tdXM9ibqIk2EHXYozcMRruJLgiAKXGZtfKws6Fo894Lfi9+1OQtieaif8cKtc41
-JW+x0188HyPvDQmqtK/JjGX6F7+CUT6vj/tS5yxj5AqeJDAvzryZTzS2+kLrpIqY
-nnkdNlVnnE4hF4YpoNhSFURK+qfDdRc3HlJbc1TpZRNtozcj8uakljdcty3pEFPr
-Udk0mnlg5gODjEMBuV07q47P9k6G58BF48UnyDm7r1iW/UofYzyc8k9NVNio+2U=
-=UXfW
+iQEcBAEBAgAGBQJTmIqoAAoJEBa/9Pad787EDVgH/3pcANybB3EjkYzuq+Bpw/mE
+4WM0nma5B5vrzJoUMVlQi0gkt80yfsiuj3lHAtd+k8t+NnllJy2uo4VgeTX6ssWD
+z+9S3xDC33R+nl3g+LInZvxyhs+VaVMpRf69kbF4WzacP8XzqpXU4X7pdZvBZbVN
+NRBdjpyxgRGuINg4ri8e3X6+SdtfhI7He4a32tnpoUCC3S9XQUb1V0TlyNZITk2D
+Few8agPHB71LFVRLOGfvnvwulrQq3eCu28GtDpckMbf8jTOXgAIHSKbIr5Ig33kV
+FeQBDptka1/PyfsrrtOp8F0BKzCsFfmxyYpcih7Q5xOMOttDJ85WxtQ6ediziIg=
+=o3hR
 -----END PGP SIGNATURE-----
