@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999992';
+our $VERSION='0.99999993';
 
 
 use 5.005;
