@@ -19,6 +19,13 @@
 ################################################################
 
 
+2014-06-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999993 released.
+
+        * New version of Term::Menus paired with this release.
+
+
 2014-06-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999992 released.
